Intend the social media signs

--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -362,4 +362,13 @@ width: 125px;
 	font-weight: normal;
 }
 
+/* News Section */
+
+#socialMedia{
+    margin: auto;
+    width:15vw;
+    height:;
+    padding: 10px;
+}
+
 --> End about page CSS <--
