--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -362,4 +362,18 @@ width: 125px;
 	font-weight: normal;
 }
 
+#storydescription2 {
+	text-align: center;
+	font-size: 16px;
+	text-decoration: none;
+	color:#BEBEBE;
+	font-weight: normal;
+	border-bottom: 2px solid #2e3192;
+}
+
+.ig {
+	position:relative;
+	top: 200px;
+}
+
 --> End about page CSS <--
