--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -349,9 +349,10 @@ width: 125px;
 	text-align: center;
 }
 
+
 #footerabout {
 	position: relative;
-	top: 200px;
+	top: 400px;
 }
 
 #storydescription {
@@ -362,7 +363,7 @@ width: 125px;
 	font-weight: normal;
 }
 
-<<<<<<< HEAD
+
 =======
 #btn1{
   color:white;
@@ -371,7 +372,7 @@ width: 125px;
   text-align:center;
 }
 
->>>>>>> 51ae3049f6624e35d99ddd02706abe1d11982906
+
 #storydescription2 {
 	text-align: center;
 	font-size: 16px;
@@ -389,77 +390,62 @@ width: 125px;
      -webkit-box-shadow: 0px 0px 12px #999;
 }
 
-#warren {
+#box1 {
 	position: relative;
 	top: 300px;
-	left: 70px;
+	left: 80px;
+	display: inline;
+}
+
+#warren {
+	height: 250px;
+	width: 250px;
+	margin: 20px;
 }
 
 #marc {
-	position: relative;
-	top: 10px;
-	left: 390px;
+	height: 250px;
+	width: 250px;
+	margin: 20px;
 }
 
 #charlie {
-	position: relative;
-	top: -287px;
-	left: 700px;
+	height: 250px;
+	width: 250px;
+	margin: 20px;
 }
 
 #oliver { 
-	position: relative;
-	top: -555px;
-	left: 1010px;
+	height: 250px;
+	width: 250px;
+	margin: 20px;
 }
 
 .ig {
 	position:relative;
 	top: 200px;
-<<<<<<< HEAD
-=======
 }
 
-#box1: {
-  width: 300px;
-  height: 200px;
-  box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
-  border-bottom: 2px solid #fff;
-  border-right: 2px solid #fff;
-  margin: 5% auto 0 auto;
-  background: url(http://ianfarb.com/wp-content/uploads/2013/10/nicholas-hodag.jpg);
-  background-size: cover;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-#overlay {
-  background: rgba(0, 0, 0, 0.75);
-  text-align: center;
-  padding: 45px 0 66px 0;
-  opacity: 0;
-  -webkit-transition: opacity 0.25s ease;
-  -moz-transition: opacity 0.25s ease;
-}
-
-#box1:hover #overlay {
-  opacity: 1;
-}
-
-#plus {
-  font-family: Helvetica;
-  font-weight: 900;
-  color: rgba(255, 255, 255, 0.85);
-  font-size: 96px;
-}
-
+#storytext2{
+	position: relative;
+	width: 50%;
+	justify-content: center;
+	font-family: times;
+	font-size: 25px;
+	font-weight: bold;
+	top: 350px;
+	margin: auto;
+	text-align: center;
+	font-size: 16px;
+	text-decoration: none;
+	color:#BEBEBE;
+	font-weight: normal;
+	border-bottom: 2px solid #2e3192;
 
 --> End about page CSS <--
 
 =======
-}
 
->>>>>>> 51ae3049f6624e35d99ddd02706abe1d11982906
 /* News Section */
 
 #socialMedia{
@@ -467,8 +453,6 @@ width: 125px;
     width:15vw;
     height:;
     padding: 10px;
-<<<<<<< HEAD
->>>>>>> a1dfe179e5033ac30214414c69f042612475ac6e <<<<<< HEAD
 }
 
 --> CSS Contact <--
@@ -479,8 +463,8 @@ width: 125px;
   text-align: center;
   width: 100%;
   align-content: center;
-
 }
+
 h3 {
   color: black;
   text-align: center;
@@ -493,13 +477,13 @@ h3 {
 	  width: 100%;
 	  color: #2e3192;
 	  align-content: center;
-	   position: relative;
-	top: 40px;
+	  position: relative;
+	  top: 400px;
 }
+
 
 --> End CSS Contact <--
 =======
 }
 
 --> End about page CSS <--
->>>>>>> 51ae3049f6624e35d99ddd02706abe1d11982906
