trying some api and fixed the caroussel padding

--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -310,6 +310,10 @@ display: none;
 width: 125px;
 }
 
+#car{
+  padding-top: 100px;
+}
+
 
 --> About page CSS <--
 
@@ -415,7 +419,7 @@ width: 125px;
 	margin: 20px;
 }
 
-#oliver { 
+#oliver {
 	height: 250px;
 	width: 250px;
 	margin: 20px;
@@ -468,7 +472,7 @@ width: 125px;
 h3 {
   color: black;
   text-align: center;
-} 
+}
 
 #contact1 {
 	 font-family: 'Times New Roman';
