--- a/API folder/API.css
+++ b/API folder/API.css
@@ -6,3 +6,6 @@
   justify-content: space-around;
   flex-wrap:wrap;
 }
+
+.box {width:800px; margin:auto; }
+.floatleft2 {float: left; width: 150px; margin:5px; }
