--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -7,7 +7,10 @@
   display: inline-block;
   margin-right: 0px!important;
 }
-
+#FirstSection
+{
+    
+}
 #navbar{
   width: 100%;
   position: fixed;
