--- a/News.css
+++ b/News.css
@@ -1,43 +1,12 @@
 *margin:0;
 padding:0;
 
-/* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-
-#map {
-    height: 500px;
-    width: 100%;
+#parent{
 }
 
-/* Optional: Makes the sample page fill the window. */
-
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+#FirstSection{
+    padding-top: 250px;
 }
-
-#floating-panel {
-    position: absolute;
-    top: 10px;
-    left: 25%;
-    z-index: 5;
-    background-color: #fff;
-    padding: 5px;
-    border: 1px solid #999;
-    text-align: center;
-    font-family: 'Roboto', 'sans-serif';
-    line-height: 30px;
-    padding-left: 10px;
-}
-
-#warnings-panel {
-    width: 100%;
-    height: 10%;
-    text-align: center;
-}
-
 section{
     height:100vh;
 }
