--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -441,6 +441,7 @@ width: 125px;
 	color:#BEBEBE;
 	font-weight: normal;
 	border-bottom: 2px solid #2e3192;
+	}
 
 --> End about page CSS <--
 
@@ -457,12 +458,13 @@ width: 125px;
 
 --> CSS Contact <--
 
-#contact {
+#contact{
  font-family: 'Times New Roman';
   font-size: 25px;
   text-align: center;
   width: 100%;
   align-content: center;
+  position
 }
 
 h3 {
@@ -486,4 +488,6 @@ h3 {
 =======
 }
 
---> End about page CSS <--
+
+
+
