again small layout

--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -187,27 +187,49 @@ h2{
 }
 
 #carousel-description{
-  position: relative;
-  margin-top: 20px;
-  background-color: rgba(237,237,237,0.7);
-  align-content: center;
-  text-align: center;
+	position: relative;
+	width: 50%;
+	justify-content: center;
+	font-family: times;
+	font-size: 25px;
+	font-weight: bold;
+	top: 100px;
+	margin: auto;
+	color: #2e3192;
+	text-decoration: none;
 }
 
 #description-text{
-  padding: 20px;
+	text-align: center;
+	font-size: 16px;
+	text-decoration: none;
+	color:#BEBEBE;
+	font-weight: normal;
+	border-bottom: 2px solid #2e3192;
+}
+
+#footerhome {
+	position: relative;
+	top: 140px;
 }
 
 #description-header{
-  font-family: 'Times New Roman';
-  font-size: 40px;
-  color: #2e3192;
-  font-weight: bold;
+	justify-content: center;
+	text-align: center;
+	font-size: 30px;
+	font-weight: bold;
+	top: 100px;
+	margin: auto;
+	color: #2e3192;
+	text-decoration: none;
+	position: relative;
+	top: -40px;
 }
 
 #description{
   font-family: 'Times New Roman';
 }
+
 
 img.wp-smiley,
 img.emoji {
@@ -364,6 +386,7 @@ width: 125px;
 	width: 50%;
 	justify-content: center;
 	font-family: times;
+	text-align: center;
 	font-size: 25px;
 	font-weight: bold;
 	top: 100px;
@@ -415,6 +438,7 @@ width: 125px;
 	 box-shadow: 0px 0px 5px #999;
      -moz-box-shadow: 0px 0px 2px #999;
      -webkit-box-shadow: 0px 0px 12px #999;
+	 justify-content: center;
 }
 
 #box1 {
@@ -422,6 +446,7 @@ width: 125px;
 	top: 300px;
 	left: 80px;
 	display: inline;
+	justify-content: center;
 }
 
 #warren {
@@ -470,6 +495,7 @@ width: 125px;
 	border-bottom: 2px solid #2e3192;
 	}
 
+
 --> End about page CSS <--
 
 =======
@@ -485,29 +511,63 @@ width: 125px;
 
 --> CSS Contact <--
 
-#contact{
- font-family: 'Times New Roman';
-  font-size: 25px;
-  text-align: center;
-  width: 100%;
-  align-content: center;
-  position
-}
-
-h3 {
-  color: black;
-  text-align: center;
-}
 
 #contact1 {
-	 font-family: 'Times New Roman';
-	  font-size: 25px;
-	  text-align: center;
-	  width: 100%;
-	  color: #2e3192;
-	  align-content: center;
-	  position: relative;
-	  top: 400px;
+	position: relative;
+	top: 200px;
+}
+
+#contacttxt {
+	position: relative;
+	top: 150px;
+	text-align: center;
+	font-family: times;
+	text-align: center;
+	font-size: 30px;
+	font-weight: bold;
+	top: 150px;
+	margin: auto;
+	color: #2e3192;
+	text-decoration: none;
+}
+
+#form1{
+	position: relative;
+	top: 180px;
+}
+
+.jumbotron {
+	position: relative;
+	top: 200px;
+}
+
+.container1 {
+	text-align: Center;
+	font-family: times;
+	text-align: center;
+	font-size: 30px;
+	font-weight: bold;
+	top: 150px;
+	margin: auto;
+	color: #2e3192;
+	text-decoration: none;
+}
+
+#contact2 {
+	text-align: Center;
+	font-family: times;
+	text-align: center;
+	font-size: 30px;
+	font-weight: bold;
+	top: 150px;
+	margin: auto;
+	color: #2e3192;
+	text-decoration: none;
+}
+
+#footercontact{
+	position: relative;
+	top: 200px;
 }
 
 --> End CSS Contact <--
