--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -1,402 +1,351 @@
- body, html {
-    height: 100%;
+body, html {
+   height: 100%;
 }
 
 .navbar-brand{
-  width:400px;
-  display: inline-block;
-  margin-right: 0px!important;
+ width:400px;
+ display: inline-block;
+ margin-right: 0px!important;
 }
 #FirstSection
 {
 
 }
 #navbar{
-  width: 100%;
-  position: fixed;
-  z-index: 1;
-  background-color: #fff;
-  box-shadow: 5px 5px 5px #999;
-     -moz-box-shadow: 2px 2px 2px #999;
-     -webkit-box-shadow: 2px 2px 2px #999;
+ width: 100%;
+ position: fixed;
+ z-index: 1;
+ background-color: #fff;
+ box-shadow: 5px 5px 5px #999;
+    -moz-box-shadow: 2px 2px 2px #999;
+    -webkit-box-shadow: 2px 2px 2px #999;
 }
 
 .navbar-toggler{
-  z-index: 1;
+ z-index: 1;
 }
 
 #logo{
-  height: 10%;
-  width: 90%;
-  min-width: 225px;
+ height: 10%;
+ width: 90%;
+ min-width: 225px;
 }
 
 #navbarText{
-  justify-content: right;
+ justify-content: right;
 }
 
 .navbar-nav{
-  min-width: 400px;
+ min-width: 400px;
 }
 
 .nav-item{
-  padding-top, padding-bottom: 0px;
-  border-radius: 5px;
-  width: 110px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 20px;
+ padding-top, padding-bottom: 0px;
+ border-radius: 5px;
+ width: 110px;
+ text-align: center;
+ vertical-align: middle;
+ line-height: 20px;
 }
 
 .dropdown{
-  margin-left: 20px;
-  margin-right: 20px;
-  padding-top, padding-bottom: 0px;
+ margin-left: 20px;
+ margin-right: 20px;
+ padding-top, padding-bottom: 0px;
 }
 
 .dropdown-toggle{
-  color: #545454;
+ color: #545454;
 }
 
 .buttonContent{
-  font-family: times;
-  font-size: 14px;
-  font-weight: bold;
-  margin: 0;
-  color: #2e3192;
-  text-decoration: none;
-  position: relative;
-  display: block;
-  padding: 16px 0;
-  line-height: 16px;
-  font-weight: 900;
-  transition: color 0.1s, background-color 0.1s,padding 0.2s ease-in;
+ font-family: times;
+ font-size: 14px;
+ font-weight: bold;
+ margin: 0;
+ color: #2e3192;
+ text-decoration: none;
+ position: relative;
+ display: block;
+ padding: 16px 0;
+ line-height: 16px;
+ font-weight: 900;
+ transition: color 0.1s, background-color 0.1s,padding 0.2s ease-in;
 }
 
 .buttonContent:hover{
-  color: #2e3192;
+ color: #2e3192;
 }
 
 .buttonContent:hover, .buttonContent:focus, .buttonContent:active {
-    text-decoration: none;
+   text-decoration: none;
 }
 
 .buttonContent {
-    text-decoration: none;
-    transition: color 0.1s, background-color 0.1s;
+   text-decoration: none;
+   transition: color 0.1s, background-color 0.1s;
 }
 
 .buttonContent::before {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 3px;
-    left: 0;
-    height: 1px;
-    width: 100%;
-    background-color: #2e3192;
-    transform-origin: right top;
-    transform: scale(0, 1);
-    transition: color 0.1s,transform 0.2s ease-out;
+   content: '';
+   display: block;
+   position: absolute;
+   bottom: 3px;
+   left: 0;
+   height: 1px;
+   width: 100%;
+   background-color: #2e3192;
+   transform-origin: right top;
+   transform: scale(0, 1);
+   transition: color 0.1s,transform 0.2s ease-out;
 }
 
 .buttonContent:active::before {
-    background-color: #2e3192;
+   background-color: #2e3192;
 }
 
 .buttonContent:hover::before, .buttonContent:focus::before {
-    transform-origin: left top;
-    transform: scale(1, 1);
+   transform-origin: left top;
+   transform: scale(1, 1);
 }
 
 #copyright {
-	font-size: 14px;
-	font-family: times;
+ font-size: 14px;
+ font-family: times;
 }
 
 .fadeIn{
-  opacity: 0;
+ opacity: 0;
 }
 
 .dropdown-menu{
-  background-color: rgba(237,237,237,0.85);
+ background-color: rgba(237,237,237,0.85);
 }
 
 #mainNav{
-  padding: 11px;
-  border: 0;
-  background-color: rgba(168,168,168,0.85);
-  cursor: pointer;
+ padding: 11px;
+ border: 0;
+ background-color: rgba(168,168,168,0.85);
+ cursor: pointer;
 }
 
 #bar1, #bar2, #bar3 {
-  width: 20px;
-  height: 3px;
-  background-color: #f2f2f2;
-  margin: 3px 0;
+ width: 20px;
+ height: 3px;
+ background-color: #f2f2f2;
+ margin: 3px 0;
 }
 
 .container-page{
-  position: relative;
-  width: 100%;
-  display: table;
-  align-items: center;
+ position: relative;
+ width: 100%;
+ display: table;
+ align-items: center;
 }
 
 #home{
-  display: table-cell;
-  vertical-align: middle;
+ display: table-cell;
+ vertical-align: middle;
 }
 
 #table-cell{
-  height: 400px;
-  width: 100%;
-  padding: 0px;
-  overflow: hidden;
+ height: 400px;
+ width: 100%;
+ padding: 0px;
+ overflow: hidden;
 }
 
 img{
-  width: 100%;
+ width: 100%;
 }
 
 .jumbotron{
-  position: absolute;
+ position: absolute;
 }
 
 #centertext {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    text-align: center;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 600px;
+   text-align: center;
 }
 
 h1{
-  font-family: 'Times New Roman'!important;
-  font-size: 40px!important;
-  font-weight: bold!important;
-  color: #fff!important;
+ font-family: 'Times New Roman'!important;
+ font-size: 40px!important;
+ font-weight: bold!important;
+ color: #fff!important;
 }
 
 h2{
-  font-family: 'Times New Roman'!important;
-  font-size: 25px!important;
-  font-weight: bold!important;
-  color: #fff!important;
-}
-
-#carousel-description{
-  position: relative;
-  margin-top: 20px;
-  background-color: white;
-  display:flex;
-  align-content: center;
-  text-align: center;
+ font-family: 'Times New Roman'!important;
+ font-size: 25px!important;
+ font-weight: bold!important;
+ color: #fff!important;
 }
 
 #description-text{
-  padding:20px;
-  position: relative;
-	width: 60%;
-
-#description-text{
-  padding:20px;
-  position: relative;
-	width: 100%;
-
-	justify-content: center;
-	font-family: times;
-	font-size: 25px;
-	font-weight: bold;
-	margin: auto;
-
-	color: #647187;
-	text-decoration: none;
+ padding:20px;
+ position: relative;
+ width: 100%;
+ justify-content: center;
+ font-family: times;
+ font-size: 25px;
+ font-weight: bold;
+ margin: auto;
+ border-bottom: 2px solid #2e3192;
+ text-decoration: none;
 }
-
-#description{
-  justify-content: center;
-  text-align: center;
-	font-size: 16px;
-	text-decoration: none;
-	color:#647187;
-	font-weight: normal;
-}
-
-#description-header{
-  font-family: 'Times New Roman';
-  font-size: 40px;
-  color: #33338b;
-  font-weight: bold;
-}
-
-
-
 
 #descriptionheader{
-  font-family: 'Times New Roman';
-  font-size: 30px;
-	font-weight: bold;
-	margin: auto;
-	text-align: center;
-	color: #33338b;
+ font-family: 'Times New Roman';
+ font-size: 30px;
+ font-weight: bold;
+ margin: auto;
+ text-align: center;
+ color: #33338b;
 }
 
 #description1 {
-	text-align: center;
-	font-size: 16px;
-	text-decoration: none;
-	color:#BEBEBE;
-	font-weight: normal;
-	margin: 20px;
-	position: relative;
+ text-align: center;
+ font-size: 16px;
+ text-decoration: none;
+ color:#BEBEBE;
+ font-weight: normal;
+ margin: 20px;
+ position: relative;
 }
-
 
 #footerhome {
-	position: relative;
-	top: 140px;
+ position: relative;
+ top: 80px;
 }
-
-
-#description-header{
-  display: flex;
-	justify-content: center;
-	text-align: center;
-	font-size: 40px;
-	font-weight: bold;
-	top: 100px;
-	margin: auto;
-	color: #33338b;
-	text-decoration: none;
-	position: relative;
-	top: -40px;
-
-}
-
-#description{
-  font-family: 'Times New Roman';
 
 .description-text {
-	position: relative;
-	top: 50px;
-
+ position: relative;
+ top: 50px;
 }
 
 .description-header{
-  font-family: 'Times New Roman';
-  font-size: 40px;
-  color: #33338b;
-  font-weight: bold;
-  display:flex;
-  justify-content: center;
-  position: relative;
+ font-family: 'Times New Roman';
+ font-size: 30px;
+ color: #33338b;
+ font-weight: bold;
+ display:flex;
+ justify-content: center;
+ position: relative;
+}
+
+#top3 {
+ position: relative;
+ top: 70px;
 }
 
 .card-title{
-  color: #33338b;
-  font-family: 'Times New Roman';
-  font-weight: bold;
-  font-size:20px;
-  display:flex;
-  justify-content: center;
+ color: #33338b;
+ font-family: 'Times New Roman';
+ font-weight: bold;
+ font-size:20px;
+ display:flex;
+ justify-content: center;
 }
 
 img.wp-smiley,
 img.emoji {
-    display: inline !important;
-    border: none !important;
-    box-shadow: none !important;
-    height: 1em !important;
-    width: 1em !important;
-    margin: 0 .07em !important;
-    vertical-align: -0.1em !important;
-    background: none !important;
-    padding: 0 !important;
+   display: inline !important;
+   border: none !important;
+   box-shadow: none !important;
+   height: 1em !important;
+   width: 1em !important;
+   margin: 0 .07em !important;
+   vertical-align: -0.1em !important;
+   background: none !important;
+   padding: 0 !important;
 }
 
 [data-icon]:before {
-    content: none
+   content: none
 }
 
 .ui-dialog {
-    position: fixed;
-    top: 100px;
+   position: fixed;
+   top: 100px;
 }
 
 .recentcomments a {
-    display: inline !important;
-    padding: 0 !important;
-    margin: 0 !important;
+   display: inline !important;
+   padding: 0 !important;
+   margin: 0 !important;
 }
 
 .rm {
-    border: 50px solid transparent;
-    background-color: transparent;
-    border-bottom: none;
+   border: 50px solid transparent;
+   background-color: transparent;
+   border-bottom: none;
 }
 
 .vc_custom_1491206972625 {
-    background-color: #ffffff !important;
+   background-color: #ffffff !important;
 }
 
 .wpb_animate_when_almost_visible {
-    opacity: 1;
+   opacity: 1;
 }
 
 #copyright{
-  display: flex;
-  justify-content: center;
+ display: flex;
+ justify-content: center;
 }
 
 .fa-twitter {
-    background: white;
-    color: #55ACEE;
-	padding-top: 50px;
-  padding-bottom: 50px;
-	font-size: 50px;
-	width: 60px;
-	text-align: center;
+   background: white;
+   color: #55ACEE;
+ padding-top: 50px;
+ padding-bottom: 50px;
+ font-size: 50px;
+ width: 60px;
+ text-align: center;
 }
 
 .fa-facebook{
-	background: white;
-	color:#3B5998;
-	padding-top: 50px;
-  padding-bottom: 50px;
-	font-size: 50px;
-	width: 50px;
-	text-align: center;
+ background: white;
+ color:#3B5998;
+ padding-top: 50px;
+ padding-bottom: 50px;
+ font-size: 50px;
+ width: 50px;
+ text-align: center;
 }
 
 .fa-linkedin{
-	background: white;
-	color:#0077B5;
-	padding-top:50px;
-  padding-bottom: 50px;
-	font-size: 50px;
-	width: 50px;
-	text-align: center;
+ background: white;
+ color:#0077B5;
+ padding-top:50px;
+ padding-bottom: 50px;
+ font-size: 50px;
+ width: 50px;
+ text-align: center;
 }
 
 
 .fa-youtube{
-	background: white;
-	color:#cc181e;
-	padding-top: 50px;
-  padding-bottom: 50px;
-	font-size: 50px;
-	width: 50px;
-	text-align: center;
+ background: white;
+ color:#cc181e;
+ padding-top: 50px;
+ padding-bottom: 50px;
+ font-size: 50px;
+ width: 50px;
+ text-align: center;
 }
 
 #shareholder{
-  position: relative;
+ position: relative;
 }
 
 .custom-file-control:lang(en)::before {
-  content: "Browse";
+ content: "Browse";
 }
 
 .custom-file-control:lang(en)::after {
@@ -413,7 +362,7 @@ width: 125px;
 }
 
 .custom-file-control:lang(en)::before {
-  content: "Browse";
+ content: "Browse";
 }
 
 .custom-file-control:lang(en)::after {
@@ -430,153 +379,154 @@ width: 125px;
 }
 
 #car{
-  padding-top: 100px;
+ padding-top: 100px;
 }
 
 .coming{
-  position:relative;
-  font-family: 'Times New Roman';
-  font-size: 40px;
-  color: #33338b;
-  font-weight: bold;
-  display:flex;
-  justify-content: center;
-  Padding-top:100px;
+ position:relative;
+ font-family: 'Times New Roman';
+ font-size: 40px;
+ color: #33338b;
+ font-weight: bold;
+ display:flex;
+ justify-content: center;
+ Padding-top:100px;
 }
 
 #comingsoon{
-  display:relative;
+ display:relative;
+ padding-top:100px;
 }
 
 --> About page CSS <--
 
 .bg {
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-	position: relative;
-    text-align: center;
-    color: white;
+   height: 100%;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+ position: relative;
+   text-align: center;
+   color: white;
 }
 
 
 #storytext {
-	position: relative;
-	width: 50%;
-	justify-content: center;
-	font-family: times;
-	text-align: center;
-	font-size: 25px;
-	font-weight: bold;
-	top: 100px;
-	margin: auto;
-	color: #2e3192;
-	text-decoration: none;
+ position: relative;
+ width: 50%;
+ justify-content: center;
+ font-family: times;
+ text-align: center;
+ font-size: 25px;
+ font-weight: bold;
+ top: 100px;
+ margin: auto;
+ color: #2e3192;
+ text-decoration: none;
 }
 
 #story-title {
-	justify-content: center;
-	border-bottom: 2px solid #2e3192;
-	text-align: center;
+ justify-content: center;
+ border-bottom: 2px solid #2e3192;
+ text-align: center;
 }
 
 
 #footerabout {
-	position: relative;
-	top: 400px;
+ position: relative;
+ top: 400px;
 }
 
 #storydescription {
-	text-align: center;
-	font-size: 16px;
-	text-decoration: none;
-	color:#BEBEBE;
-	font-weight: normal;
+ text-align: center;
+ font-size: 16px;
+ text-decoration: none;
+ color:#BEBEBE;
+ font-weight: normal;
 }
 
 #btn1{
-  color:white;
-  font-weight: bold;
-  font-family: "Times New Roman", Times , serif;
-  text-align:center;
+ color:white;
+ font-weight: bold;
+ font-family: "Times New Roman", Times , serif;
+ text-align:center;
 }
 
 
 #storydescription2 {
-	text-align: center;
-	font-size: 16px;
-	text-decoration: none;
-	color:#BEBEBE;
-	font-weight: normal;
-	border-bottom: 2px solid #2e3192;
+ text-align: center;
+ font-size: 16px;
+ text-decoration: none;
+ color:#BEBEBE;
+ font-weight: normal;
+ border-bottom: 2px solid #2e3192;
 }
 
 .circle {
-	 border-radius: 50%;
-	 border: 2px solid #D9F0FF;
-	 box-shadow: 0px 0px 5px #999;
-     -moz-box-shadow: 0px 0px 2px #999;
-     -webkit-box-shadow: 0px 0px 12px #999;
-	 justify-content: center;
+  border-radius: 50%;
+  border: 2px solid #D9F0FF;
+  box-shadow: 0px 0px 5px #999;
+    -moz-box-shadow: 0px 0px 2px #999;
+    -webkit-box-shadow: 0px 0px 12px #999;
+  justify-content: center;
 }
 
 #box1 {
-	position: relative;
-	top: 300px;
-	left: 80px;
-	display: inline;
-	justify-content: center;
+ position: relative;
+ top: 300px;
+ left: 80px;
+ display: inline;
+ justify-content: center;
 }
 
 #warren {
-	height: 250px;
-	width: 250px;
-	margin: 20px;
+ height: 250px;
+ width: 250px;
+ margin: 20px;
 }
 
 #marc {
-	height: 250px;
-	width: 250px;
-	margin: 20px;
+ height: 250px;
+ width: 250px;
+ margin: 20px;
 }
 
 #charlie {
-	height: 250px;
-	width: 250px;
-	margin: 20px;
+ height: 250px;
+ width: 250px;
+ margin: 20px;
 }
 
 #oliver {
-	height: 250px;
-	width: 250px;
-	margin: 20px;
+ height: 250px;
+ width: 250px;
+ margin: 20px;
 }
 
 .ig {
-	position:relative;
-	top: 200px;
+ position:relative;
+ top: 200px;
 }
 
 #storytext2{
-	position: relative;
-	width: 50%;
-	justify-content: center;
-	font-family: times;
-	font-size: 25px;
-	font-weight: bold;
-	top: 350px;
-	margin: auto;
-	text-align: center;
-	font-size: 16px;
-	text-decoration: none;
-	color:#BEBEBE;
-	font-weight: normal;
-	border-bottom: 2px solid #2e3192;
-	}
+ position: relative;
+ width: 50%;
+ justify-content: center;
+ font-family: times;
+ font-size: 25px;
+ font-weight: bold;
+ top: 350px;
+ margin: auto;
+ text-align: center;
+ font-size: 16px;
+ text-decoration: none;
+ color:#BEBEBE;
+ font-weight: normal;
+ border-bottom: 2px solid #2e3192;
+ }
 
 .description-text{
-  position: relative;
+ position: relative;
 }
 
 --> End about page CSS <--
@@ -586,71 +536,71 @@ width: 125px;
 /* News Section */
 
 #socialMedia{
-    margin: auto;
-    width:15vw;
-    height:;
-    padding: 10px;
+   margin: auto;
+   width:15vw;
+   height:;
+   padding: 10px;
 }
 
 --> CSS Contact <--
 
 
 #contact1 {
-	position: relative;
-	top: 200px;
+ position: relative;
+ top: 200px;
 }
 
 #contacttxt {
-	position: relative;
-	top: 150px;
-	text-align: center;
-	font-family: times;
-	text-align: center;
-	font-size: 30px;
-	font-weight: bold;
-	top: 120px;
-	margin: auto;
-	color: #2e3192;
-	text-decoration: none;
+ position: relative;
+ top: 150px;
+ text-align: center;
+ font-family: times;
+ text-align: center;
+ font-size: 30px;
+ font-weight: bold;
+ top: 120px;
+ margin: auto;
+ color: #2e3192;
+ text-decoration: none;
 }
 
 #form1{
-	position: relative;
-	top: 130px;
+ position: relative;
+ top: 130px;
 }
 
 .jumbotron {
-	position: relative;
-	top: 160px;
+ position: relative;
+ top: 160px;
 }
 
 .container1 {
-	text-align: Center;
-	font-family: times;
-	text-align: center;
-	font-size: 30px;
-	font-weight: bold;
-	top: 150px;
-	margin: auto;
-	color: #2e3192;
-	text-decoration: none;
+ text-align: Center;
+ font-family: times;
+ text-align: center;
+ font-size: 30px;
+ font-weight: bold;
+ top: 150px;
+ margin: auto;
+ color: #2e3192;
+ text-decoration: none;
 }
 
 #contact2 {
-	text-align: Center;
-	font-family: times;
-	text-align: center;
-	font-size: 30px;
-	font-weight: bold;
-	top: 150px;
-	margin: auto;
-	color: #2e3192;
-	text-decoration: none;
+ text-align: Center;
+ font-family: times;
+ text-align: center;
+ font-size: 30px;
+ font-weight: bold;
+ top: 150px;
+ margin: auto;
+ color: #2e3192;
+ text-decoration: none;
 }
 
 #footercontact{
-	position: relative;
-	top: 600px;
+ position: relative;
+ top: 600px;
 }
 
 --> End CSS Contact <--
