--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -212,7 +212,7 @@ h2{
  text-align: center;
  font-size: 16px;
  text-decoration: none;
- color:#BEBEBE;
+ color:##3c3c63;
  font-weight: normal;
  margin: 20px;
  position: relative;
@@ -441,7 +441,7 @@ width: 125px;
  text-align: center;
  font-size: 16px;
  text-decoration: none;
- color:#BEBEBE;
+ color:#3c3c63;
  font-weight: normal;
 }
 
@@ -457,7 +457,7 @@ width: 125px;
  text-align: center;
  font-size: 16px;
  text-decoration: none;
- color:#BEBEBE;
+ color:#3c3c63;
  font-weight: normal;
  border-bottom: 2px solid #2e3192;
 }
