--- a/BerkshireFinalFinal.css
+++ b/BerkshireFinalFinal.css
@@ -520,7 +520,7 @@ width: 125px;
  text-align: center;
  font-size: 16px;
  text-decoration: none;
- color:#BEBEBE;
+ color:#3c3c63;
  font-weight: normal;
  border-bottom: 2px solid #2e3192;
  }
